# spec-driven-ToDo-App-2

./: .gitignore  .mcp.json  BETTER_AUTH_FIX.md  CLAUDE.md  CRITICAL_FIX_COMPLETE.md  MCP_SEPARATE_SERVER_SETUP.md  Makefile  NEON_DB_SETUP_COMPLETE.md  README.md  backend.env  constitution-prompt-phase-2.md  constitution-prompt-phase-4.md  deploy-k8s.ps1  docker-compose.yml  package-lock.json  plan-prompt-phase-4.md  spec-prompt-phase-2.md  spec-prompt-phase-4.md  start.sh  validate-quickstart.sh
backend/: .env.example  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOGGING_SETUP.md  OBSERVABILITY_IMPLEMENTATION.md  RATE_LIMITING.md  README.md  SECURITY_ARCHITECTURE.md  USER_ISOLATION_ANALYSIS.md  USER_ISOLATION_CHECKLIST.md  alembic.ini  drop_fk.py  drop_old_user_table.py  fix_db.py  fix_db_schema.py  pyproject.toml  test_login.py  validate_env.py  verify_observability.py
backend/migrations/: env.py
backend/migrations/versions/: 20260104_0001_add_conversation_message.py
backend/src/: auth.py  db.py  main.py  mcp_server.py  models.py
backend/src/agent/: README.md  __init__.py  config.py  example.py  prompts.py  runner.py
backend/src/chatkit/: __init__.py  server.py  store.py
backend/src/middleware/: __init__.py  rate_limit.py  request_id.py  timing.py
backend/src/routes/: chat.py  chatkit.py  conversations.py  tasks.py  voice.py
backend/src/schemas/: __init__.py  auth.py  chat.py  task.py
backend/src/services/: conversation_service.py  task_service.py
backend/src/utils/: LOGGING.md  __init__.py  jwt_utils.py  logger.py  password.py
backend/tests/: README_USER_ISOLATION.md  __init__.py  conftest.py  test_agent_config.py  test_auth.py  test_db.py  test_jwt.py  test_logging_security.py  test_models.py  test_rate_limit.py  test_tasks.py  test_user_isolation.py
(+252 files in other folders)
